TestSuite/src/application/shaders/invalid/ShadersInvalidTester.h
#pragma once

#include <string>
#include "ShadersInvalidDeviceTest.h"

class ShadersInvalidTester
{
public:
	ShadersInvalidTester();
	~ShadersInvalidTester();

	std::string test();

private:
	std::string testDevice();
};
